--- a/5_Project/ImpGraphicsEngine/ImpGraphicsEngine.vcxproj.filters
+++ b/5_Project/ImpGraphicsEngine/ImpGraphicsEngine.vcxproj.filters
@@ -45,9 +45,6 @@
     <ClInclude Include="IImpGraphicsEngine.h">
       <Filter>GraphicsEngine</Filter>
     </ClInclude>
-    <ClInclude Include="Mesh.h">
-      <Filter>Resource\Object\Mesh</Filter>
-    </ClInclude>
     <ClInclude Include="IImp3DRenderer.h">
       <Filter>Renderer</Filter>
     </ClInclude>
@@ -78,12 +75,6 @@
     <ClInclude Include="ResourceManager.h">
       <Filter>Resource\Management</Filter>
     </ClInclude>
-    <ClInclude Include="IBuilder.h">
-      <Filter>Resource\Management</Filter>
-    </ClInclude>
-    <ClInclude Include="MeshObjectBuilder.h">
-      <Filter>Resource\Management</Filter>
-    </ClInclude>
     <ClInclude Include="ObjectManager.h">
       <Filter>Resource\Management</Filter>
     </ClInclude>
@@ -96,9 +87,6 @@
     <ClInclude Include="Light.h">
       <Filter>Resource\Object</Filter>
     </ClInclude>
-    <ClInclude Include="MeshObject.h">
-      <Filter>Resource\Object\Mesh</Filter>
-    </ClInclude>
     <ClInclude Include="ImpShader.h">
       <Filter>DirectX11</Filter>
     </ClInclude>
@@ -107,6 +95,9 @@
     </ClInclude>
     <ClInclude Include="Builder.h">
       <Filter>Resource\Management</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshObject.h">
+      <Filter>Resource\Object</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -118,9 +109,6 @@
     </ClCompile>
     <ClCompile Include="ImpCamera.cpp">
       <Filter>Resource\Object</Filter>
-    </ClCompile>
-    <ClCompile Include="Mesh.cpp">
-      <Filter>Resource\Object\Mesh</Filter>
     </ClCompile>
     <ClCompile Include="ImpGraphicsEngine.cpp">
       <Filter>GraphicsEngine</Filter>
@@ -146,14 +134,8 @@
     <ClCompile Include="ResourceManager.cpp">
       <Filter>Resource\Management</Filter>
     </ClCompile>
-    <ClCompile Include="MeshObjectBuilder.cpp">
-      <Filter>Resource\Management</Filter>
-    </ClCompile>
     <ClCompile Include="ObjectManager.cpp">
       <Filter>Resource\Management</Filter>
-    </ClCompile>
-    <ClCompile Include="IObject.cpp">
-      <Filter>Resource\Object</Filter>
     </ClCompile>
     <ClCompile Include="Effects.cpp">
       <Filter>DirectX11</Filter>
@@ -161,21 +143,33 @@
     <ClCompile Include="Light.cpp">
       <Filter>Resource\Object</Filter>
     </ClCompile>
-    <ClCompile Include="MeshObject.cpp">
-      <Filter>Resource\Object\Mesh</Filter>
-    </ClCompile>
     <ClCompile Include="ImpShader.cpp">
       <Filter>DirectX11</Filter>
     </ClCompile>
     <ClCompile Include="Builder.cpp">
       <Filter>Resource\Management</Filter>
     </ClCompile>
+    <ClCompile Include="MeshObject.cpp">
+      <Filter>Resource\Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="VertexShader.hlsl">
+    <FxCompile Include="ColorVS.hlsl">
       <Filter>Resource\Shader</Filter>
     </FxCompile>
-    <FxCompile Include="PixelShader.hlsl">
+    <FxCompile Include="ColorPS.hlsl">
+      <Filter>Resource\Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="FirstPassVS.hlsl">
+      <Filter>Resource\Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="FirstPassPS.hlsl">
+      <Filter>Resource\Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="SecondPassVS.hlsl">
+      <Filter>Resource\Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="SecondPassPS.hlsl">
       <Filter>Resource\Shader</Filter>
     </FxCompile>
   </ItemGroup>
