--- a/5_Project/ImpStructure/ImpStructure.vcxproj
+++ b/5_Project/ImpStructure/ImpStructure.vcxproj
@@ -139,11 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ImpColor.h" />
     <ClInclude Include="ImpMath.h" />
+    <ClInclude Include="ImpMesh.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ImpColor.cpp" />
     <ClCompile Include="ImpMath.cpp" />
+    <ClCompile Include="ImpMesh.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
