--- a/5_Project/ImpEngineDemo/imgui.ini
+++ b/5_Project/ImpEngineDemo/imgui.ini
@@ -9,9 +9,9 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1214,165
+ViewportPos=2242,104
 ViewportId=0xE927CF2F
-Size=487,532
+Size=609,758
 Collapsed=0
 
 [Window][File]
@@ -22,19 +22,19 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][EntityViewer]
-Pos=901,24
-Size=379,370
+Pos=906,24
+Size=374,230
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][ComponentViewer]
-Pos=901,396
-Size=379,564
+Pos=906,256
+Size=374,354
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Save an Entity]
-ViewportPos=1172,413
+ViewportPos=1161,411
 ViewportId=0x059F77EB
 Size=672,90
 Collapsed=0
@@ -51,18 +51,17 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=557,122
+Pos=425,292
 Size=531,474
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,-3
+Pos=0,24
 Size=1280,936
 Collapsed=0
 
 [Window][Example: Documents]
-ViewportPos=609,63
-ViewportId=0x1FD64BEB
+Pos=609,13
 Size=648,1034
 Collapsed=0
 
@@ -88,19 +87,18 @@ Size=32,40
 Collapsed=0
 
 [Window][Example: Property editor]
-Pos=543,366
+Pos=540,393
 Size=430,450
 Collapsed=0
 
 [Window][Example: Simple layout]
-ViewportPos=795,506
-ViewportId=0x32FFF4A6
+Pos=704,435
 Size=500,440
 Collapsed=0
 
 [Window][Example: Simple layout/left pane_AED60EF8]
 IsChild=1
-Size=150,386
+Size=150,376
 
 [Window][Example: Auto-resizing window]
 ViewportPos=195,616
@@ -130,10 +128,10 @@ Size=395,321
 Collapsed=1
 
 [Window][ResourceViewer]
-Pos=0,557
-Size=899,403
+Pos=0,612
+Size=1280,348
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000009,0
 
 [Window][WorldViewer]
 ViewportPos=1046,372
@@ -149,7 +147,7 @@ Size=387,92
 Collapsed=0
 
 [Window][Save Successed!!]
-Pos=368,36
+Pos=365,37
 Size=200,50
 Collapsed=0
 
@@ -164,20 +162,19 @@ Size=623,156
 Collapsed=0
 
 [Window][Dear ImGui ID Stack Tool]
-ViewportPos=60,110
-ViewportId=0x811A7A42
+Pos=60,60
 Size=354,104
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-ViewportPos=1121,62
+ViewportPos=2455,126
 ViewportId=0x6D551092
-Size=595,1034
+Size=352,1034
 Collapsed=0
 
 [Window][About Dear ImGui]
 Pos=62,60
-Size=518,156
+Size=570,126
 Collapsed=0
 
 [Window][Example: Long text display]
@@ -201,20 +198,27 @@ Collapsed=0
 Pos=0,19
 Size=676,359
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000006,0
+
+[Window][Enter Directory Name]
+Pos=438,455
+Size=405,92
+Collapsed=0
 
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,74 Size=1280,936 Split=X
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=899,1056 Split=Y
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1920,531 Split=X
-      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=872,871
-      DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=876,871 CentralNode=1 Selected=0xE87781F4
-    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1920,403 Selected=0xDD3E564C
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=379,1056 Split=Y Selected=0x49F073B2
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=402,370 Selected=0x49F073B2
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=402,564 Selected=0xD0CC57A6
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,74 Size=1280,936 Split=Y
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1280,586 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000008 SizeRef=904,1056 Split=X
+      DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=872,871
+      DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=876,871 Split=Y Selected=0xE87781F4
+        DockNode  ID=0x00000006 Parent=0x0000000A SizeRef=899,885 CentralNode=1 Selected=0xDD3E564C
+        DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=899,328 Selected=0xDD3E564C
+    DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=374,1056 Split=Y Selected=0x49F073B2
+      DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=402,230 Selected=0x49F073B2
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=402,354 Selected=0xD0CC57A6
+  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=1280,348 Selected=0xDD3E564C
 
