--- a/5_Project/ImpStructure/ImpStructure.vcxproj.filters
+++ b/5_Project/ImpStructure/ImpStructure.vcxproj.filters
@@ -7,6 +7,12 @@
     <Filter Include="Math">
       <UniqueIdentifier>{97898170-afd1-4e95-bec2-6af735ce5001}</UniqueIdentifier>
     </Filter>
+    <Filter Include="3D">
+      <UniqueIdentifier>{55fd1b50-0916-4335-94b8-eb79fc18c971}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Color">
+      <UniqueIdentifier>{713f0770-0b6c-4eea-a35a-ce3caad2b4e3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -15,6 +21,12 @@
     <ClInclude Include="ImpMath.h">
       <Filter>Math</Filter>
     </ClInclude>
+    <ClInclude Include="ImpMesh.h">
+      <Filter>3D</Filter>
+    </ClInclude>
+    <ClInclude Include="ImpColor.h">
+      <Filter>Color</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -22,6 +34,12 @@
     </ClCompile>
     <ClCompile Include="ImpMath.cpp">
       <Filter>Math</Filter>
+    </ClCompile>
+    <ClCompile Include="ImpMesh.cpp">
+      <Filter>3D</Filter>
+    </ClCompile>
+    <ClCompile Include="ImpColor.cpp">
+      <Filter>Color</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
